# maghreb

./: CMakeLists.txt  README.md
include/: maghreb.h
src/: maghreb.c
test/: test.c
